--- a/APM-Start/src/app/products/product-list.component.html
+++ b/APM-Start/src/app/products/product-list.component.html
@@ -13,7 +13,7 @@
       </div>
     </div>
     <div class="table-responsive">
-      <table class="table" *ngIf="products.length">
+      <table class="table" *ngIf="filteredProducts.length">
         <thead>
           <tr>
             <th>
